# bugbots

./: .gitmodules
Arena/: AUTHORS  BugBots Arena.sln  Makefile.am  configure.in
Arena/MacOS/BugBotsArena/: Info.plist
Arena/MacOS/BugBotsArena/BugBotsArena.xcodeproj/: project.pbxproj  tnitz.mode1v3
Arena/MacOS/BugBotsArena/English.lproj/: InfoPlist.strings
Arena/src/: App.cpp  App.h  BugBot.cpp  BugBot.h  BugBots Arena.vcproj  Clump.cpp  Clump.h  Defs.h  Food.cpp  Food.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Main.cpp  MainBrain.cpp  MainBrain.h  Utilities.cpp  Utilities.h
Evolution/BugBots Evolution/: BugBots Evolution.depend  bb.workspace
Evolution/BugBots Evolution/src/: BugBot.cpp  BugBot.h  Constants.h  Displayable.h  Position.h  View.cpp  View.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h  main.cpp
bb2/: BugBots.cpp  Food.cpp  Makefile-original  MapHandler.cpp  MapHandler.h  bb-ted.cpp  bb.cpp  bb_l.cpp  clump.h  food.h  mainbrain.cpp  mainbrain.h  soundmanager.cpp  sutil.h  utility.cpp  utility.h
bb2/autom4te.cache/: requests  traces.0  traces.1
common/Quadtree/: Bounds.hxx  Geometry.hxx  Node.hxx
src/: BugBots Arena.vcproj  Main.cpp
trunk/Arena/: Makefile.am  configure.in
trunk/Arena/MacOS/BugBotsArena/BugBotsArena.xcodeproj/: project.pbxproj  tnitz.pbxuser
trunk/Arena/src/: App.cpp  App.h  BugBot.cpp  BugBot.h  Clump.cpp  Clump.h  Defs.h  Food.cpp  Food.h  Game.cpp  Game.h  GameObject.h  Main.cpp  MainBrain.cpp  MainBrain.h  Utilities.cpp  Utilities.h
trunk/Evolution/BugBots Evolution/: BugBots Evolution.cbp  BugBots Evolution.depend
trunk/Evolution/BugBots Evolution/src/: BugBot.cpp  BugBot.h  Constants.h  Displayable.cpp  Position.h  View.cpp  World.cpp  World.h  WorldObject.h  main.cpp
trunk/bb2/: BugBot.h  BugBots.cpp  Debug.cpp  Food.cpp  Makefile.am  Makefile.in  MapHandler.cpp  MapHandler.h  bb2.kdev4  bb_l.cpp  bb_w.cpp  bb_w_bak.cpp  clump.cpp  clump.h  configure  configure.in  flag.cpp  food.h  mainbrain.cpp  soundmanager.h
trunk/bb2/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.2  traces.3
trunk/common/Quadtree/: Geometry.hxx  Iterator.hxx  Node.cxx  Node.hxx  NodePool.hxx  Quadtree.hxx  Visitor.hxx  plans.txt
trunk/src/: Defs.h  Main.cpp
