
bin_PROGRAMS = bba

bba_LIBS = sdl

bba_CPPFLAGS = $(SDL_CFLAGS) \
			$(CPPFLAGS)
bba_CFLAGS = $(SDL_CFLAGS) 

bba_SOURCES = \
		src/Main.cpp \
		src/App.cpp \
		src/App.h \
		src/Defs.h \
		src/Game.cpp \
		src/Game.h \
		src/GameObject.cpp \
		src/GameObject.h \
		src/BugBot.cpp \
		src/BugBot.h \
		src/MainBrain.cpp \
		src/MainBrain.h \
		src/Utilities.cpp \
		src/Utilities.h \
		src/Food.cpp \
		src/Food.h




