
bin_PROGRAMS = bb2

bb2_LIBS = sdl

bb2_CPPFLAGS = $(SDL_CFLAGS) \
			$(CPPFLAGS)
bb2_CFLAGS = $(SDL_CFLAGS) 

bb2_SOURCES = \
		 BugBots.cpp \
		 clump.h \
		 flag.cpp \
		 food.h  \
		 mainbrain.h \
		 MapHandler.h  \
		 soundmanager.h \
		 utility.cpp \
		 bb_l.cpp \
		 BugBot.h \
		 clump.cpp \
		 Debug.cpp \
		 Food.cpp \
		 mainbrain.cpp \
		 MapHandler.cpp \
		 soundmanager.cpp \
		 sutil.h \
	         utility.h




